buildlog.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.6/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
Warning: SDK processing. This version only understands SDK XML versions up to 3 but an SDK XML file of version 4 was encountered. This can happen if you use versions of Android Studio and the command-line tools that were released at different times.
WARNING: We recommend using a newer Android Gradle plugin to use compileSdk = 36

This Android Gradle plugin (8.1.1) was tested up to compileSdk = 34.

You are strongly encouraged to update your project to use a newer
Android Gradle plugin that has been tested with compileSdk = 36.

If you are already using the latest version of the Android Gradle plugin,
you may need to wait until a newer version with support for compileSdk = 36 is available.

To suppress this warning, add/update
    android.suppressUnsupportedCompileSdk=36
to this project's gradle.properties.
> Task :app:preBuild UP-TO-DATE
> Task :app:preDevDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDevDebug UP-TO-DATE
> Task :app:checkDevDebugAarMetadata UP-TO-DATE
> Task :app:generateDevDebugResValues UP-TO-DATE
> Task :app:mapDevDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDevDebugResources UP-TO-DATE
> Task :app:mergeDevDebugResources UP-TO-DATE
> Task :app:packageDevDebugResources UP-TO-DATE
> Task :app:parseDevDebugLocalResources UP-TO-DATE
> Task :app:createDevDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDevDebug UP-TO-DATE
> Task :app:processDevDebugMainManifest UP-TO-DATE
> Task :app:processDevDebugManifest UP-TO-DATE
> Task :app:processDevDebugManifestForPackage UP-TO-DATE
> Task :app:processDevDebugResources UP-TO-DATE

> Task :app:compileDevDebugJavaWithJavac FAILED
/home/sb/AndroidStudioProjects/ExpenseTracker/app/src/main/java/com/pixelpen/whereitwent/MainActivityReorder.java:39: error: cannot find symbol
        TextView inputDate = findViewById(R.id.text_date);
        ^
  symbol:   class TextView
  location: class MainActivityReorder
/home/sb/AndroidStudioProjects/ExpenseTracker/app/src/main/java/com/pixelpen/whereitwent/MainActivityReorder.java:40: error: cannot find symbol
        AppCompatButton buttonOk = findViewById(R.id.btn_save);
        ^
  symbol:   class AppCompatButton
  location: class MainActivityReorder
/home/sb/AndroidStudioProjects/ExpenseTracker/app/src/main/java/com/pixelpen/whereitwent/MainActivityReorder.java:53: error: cannot find symbol
        String today = sdf.format(new Date());
                                      ^
  symbol:   class Date
  location: class MainActivityReorder
/home/sb/AndroidStudioProjects/ExpenseTracker/app/src/main/java/com/pixelpen/whereitwent/MainActivityReorder.java:104: error: cannot find symbol
            Executors.newSingleThreadExecutor().execute(() -> {
            ^
  symbol:   variable Executors
  location: class MainActivityReorder
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDevDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 17s
14 actionable tasks: 1 executed, 13 up-to-date
